--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 </head>
 <header>
     <h1 class="cabecalho">
- Animes
+ ANIMES
     </h1>
 </header>
 <body>
-    <header class="nave">
-        <img class="imagem-livro" src="NARUTO.full.2741394.jpg" alt="LIVRO">
+    <img class="imagem-livro" src="NARUTO.full.2741394.jpg" alt="LIVRO">
+        <header class="nave">        
             <nav class="botao">
-                <a class="item-botao">MANGAS</a>
-                <a class="item-botao">PERSONAGENS</a>
-                <a class="item-botao">LER</a>
-                <a class="item-botao">SOBRE ANIMES</a>
+                <a href=index1.html class="item-botao"><font color="#000000">MANGÁS </font></a>
+                <a href=index2.html class="item-botao"> <font color="#000000">PERSONAGENS </font></a>
+                <a href=index3.html class="item-botao"><font color="#000000"> LER </font></a>
+                <a href=index4.html class="item-botao"><font color="#000000"> CURIOSIDADES </font></a>
     
         </nav>
     
