--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Meus livros favoritos da Jane Austen">
+    <meta name="description" content="Meus animes favoritos">
     <title>MEUS ANIMES FAVORITOS</title>
     <link rel="stylesheet" type="text/css" href="style1.css">
     <link rel="stylesheet" href="reset.css">
